--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -4,7 +4,6 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 24px;
-    /* overflow: hidden; */
     height: 500px;
 }
 
@@ -16,7 +15,7 @@
 }
 
 .about-gradient {
-    background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
+    background-image: linear-gradient(45deg, rgb(0, 88, 88), rgba(0, 128, 128, 0.516) 30%, white 60%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -34,12 +33,11 @@
 }
 
 .about-div{
-    width: 50%;
-    position: absolute;
+    width: 100%;
     align-items: center;
     margin: 0 auto;
     text-align: center;
-    margin-top: 12rem;
+    margin-top: 2rem;
 }
 
 .f-page{
@@ -70,7 +68,6 @@
     background: rgb(0, 49, 129);
     border-radius: 24px;
     color: white;
-    padding: 2rem;
     z-index: 11;
 }
 
@@ -88,22 +85,130 @@
     align-items: stretch;
 }
 
+
+
 @media (max-width: 375px) {
+    .about-heading{
+        font-size: 2rem;
+    }
     
 }
 
-@media (min-width: 376px) and (max-width: 480px) {}
+@media (min-width: 376px) and (max-width: 480px) {
+    .about-heading{
+        font-size: 3rem;
+    }
+    .book-sub-div{
+        height: 480px;
+        margin-top: -8rem;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        position: relative;
+        width: 80%;
+        height: 200px;
+        margin: 0 auto;
+        margin-top: -5rem;
+    }
+}
 
-@media (min-width: 481px) and (max-width: 640px) {}
+@media (min-width: 481px) and (max-width: 640px) {
+    .about-heading{
+        font-size: 3.5rem;
+    }
+    
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        position: relative;
+        width: 80%;
+        height: 200px;
+        margin: 0 auto;
+        margin-top: -5rem;
+    }
+}
 
-@media (min-width: 641px) and (max-width: 767px) {}
+@media (min-width: 641px) and (max-width: 767px) {
+    .about-heading{
+        font-size: 4rem;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        display: none;
+        position: relative;
+        width: 80%;
+        height: 200px;
+        margin: 0 auto;
+        margin-top: -5rem;
+    }
+}
 
-@media (min-width: 768px) and (max-width: 1024px) {}
+@media (min-width: 768px) and (max-width: 1024px) {
+    .about-heading{
+        font-size: 4rem;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        display: none;
+        position: relative;
+        width: 80%;
+        height: 200px;
+        margin: 0 auto;
+        margin-top: -5rem;
+    }
+}
 
-@media (min-width: 1025px) and (max-width: 1280px) {}
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .about-heading{
+        font-size: 4rem;
+    }
+}
 
-@media (min-width: 1281px) and (max-width: 1440px) {}
+@media (min-width: 1281px) and (max-width: 1440px) {
+    .about-heading{
+        font-size: 4rem;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        position: relative;
+    }
+}
 
-@media (min-width: 1441px) and (max-width: 1920px) {}
+@media (min-width: 1441px) and (max-width: 1920px) {
+    .about-heading{
+        font-size: 3.2rem;
+        text-decoration: 5px underline rgb(177, 177, 177);
+        text-underline-offset: 8px;
+        transition: all linear 5s;
+    }
+    .about-heading:hover{
+        text-decoration: none;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        position: relative;
+    }
+}
 
-@media (min-width: 1921px) {}
+@media (min-width: 1921px) {
+    .about-heading{
+        font-size: 4rem;
+    }
+    .yt-video-div{
+        display: none;
+    }
+    .mb-yt-video-div{
+        position: relative;
+    }
+}
