--- a/src/Components/CSS/About.css
+++ b/src/Components/CSS/About.css
@@ -16,6 +16,18 @@
     background-position: 0%;
 }
 
+@keyframes float2 {
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-5px);
+    }
+}
+.animate-float-about {
+    animation: float2 5s ease-in-out infinite;
+}
 
 @media (max-width: 375px) {
     .aboutus-dimond{
