--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -32,7 +32,7 @@
     color: #2d3748;
 }
 
-.about-div{
+.about-div {
     width: 100%;
     align-items: center;
     margin: 0 auto;
@@ -40,15 +40,15 @@
     margin-top: 2rem;
 }
 
-.f-page{
+.f-page {
     background-color: rgb(0, 49, 129);
     text-align: center;
     align-items: center;
-    border: 2px solid gray;
     border-radius: 24px;
     box-shadow: 15px 15px 25px 0px gray;
 }
-.book-cover-logo{
+
+.book-cover-logo {
     width: 50%;
     height: 7rem;
     margin: 0 auto;
@@ -57,19 +57,71 @@
     display: flex;
     justify-content: center;
 }
-.book-left-page{
+
+.book-left-page {
     background-color: white;
     border-radius: 24px;
-    border: 2px solid gray;
-
+    border-right: 5px solid rgba(255, 255, 255, 0.277);
 }
-.book-right-page{
-    border: 2px solid gray;
+
+.book-right-page {
     background: rgb(0, 49, 129);
     border-radius: 24px;
     color: white;
-    z-index: 11;
+    animation: slideInRight 1s infinite ease-in-out forwards;
 }
+
+/* @keyframes slideInRight {
+    0% {
+      transform: scale(1) rotate(0deg);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(1.02) rotate(0.5deg);
+      opacity: 0.95;
+    }
+    100% {
+      transform: scale(1) rotate(0deg);
+      opacity: 1;
+    }
+  } */
+
+.page-corner-hint::after {
+    content: 'click\Ahere';
+    /* Line break */
+    white-space: pre-line;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    background: radial-gradient(circle at bottom right, rgb(255, 255, 255), transparent);
+    color: red;
+    font-size: 1rem;
+    font-weight: bold;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 10px;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%);
+    animation: cornerPulse 2s infinite ease-in-out;
+    pointer-events: none;
+}
+
+@keyframes cornerPulse {
+
+    0%,
+    100% {
+        transform: scale(1);
+        opacity: 0.5;
+    }
+
+    50% {
+        transform: scale(1.05);
+        opacity: 1;
+    }
+}
+
 
 .page .page-cover {
     background-color: rgb(0, 49, 129);
@@ -88,24 +140,35 @@
 
 
 @media (max-width: 375px) {
-    .about-heading{
+    .about-book {
+        display: none;
+    }
+
+    .about-heading {
         font-size: 2rem;
     }
-    
+
 }
 
-@media (min-width: 376px) and (max-width: 480px) {
-    .about-heading{
+@media (min-width: 375px) and (max-width: 480px) {
+    .about-book {
+        display: none;
+    }
+
+    .about-heading {
         font-size: 3rem;
     }
-    .book-sub-div{
+
+    .book-sub-div {
         height: 480px;
         margin-top: -8rem;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         position: relative;
         width: 80%;
         height: 200px;
@@ -115,14 +178,19 @@
 }
 
 @media (min-width: 481px) and (max-width: 640px) {
-    .about-heading{
-        font-size: 3.5rem;
-    }
-    
-    .yt-video-div{
+    .about-book {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .about-heading {
+        font-size: 3.5rem;
+    }
+
+    .yt-video-div {
+        display: none;
+    }
+
+    .mb-yt-video-div {
         position: relative;
         width: 80%;
         height: 200px;
@@ -132,13 +200,15 @@
 }
 
 @media (min-width: 641px) and (max-width: 767px) {
-    .about-heading{
+    .about-heading {
         font-size: 4rem;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         display: none;
         position: relative;
         width: 80%;
@@ -149,13 +219,15 @@
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-    .about-heading{
+    .about-heading {
         font-size: 4rem;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         display: none;
         position: relative;
         width: 80%;
@@ -166,49 +238,56 @@
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
-    .about-heading{
+    .about-heading {
         font-size: 4rem;
     }
 }
 
 @media (min-width: 1281px) and (max-width: 1440px) {
-    .about-heading{
+    .about-heading {
         font-size: 4rem;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         position: relative;
     }
 }
 
 @media (min-width: 1441px) and (max-width: 1920px) {
-    .about-heading{
+    .about-heading {
         font-size: 3.2rem;
         text-decoration: 5px underline rgb(177, 177, 177);
         text-underline-offset: 8px;
         transition: all linear 5s;
     }
-    .about-heading:hover{
+
+    .about-heading:hover {
         text-decoration: none;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         position: relative;
     }
 }
 
 @media (min-width: 1921px) {
-    .about-heading{
+    .about-heading {
         font-size: 4rem;
     }
-    .yt-video-div{
+
+    .yt-video-div {
         display: none;
     }
-    .mb-yt-video-div{
+
+    .mb-yt-video-div {
         position: relative;
     }
 }
