--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -1,6 +1,9 @@
 .hostipal-name-span {
     font-family: "Noto Serif Gujarati", serif;
 }
+.mobile-nav{
+    overflow: auto;
+}
 
 @media (max-width: 375px) {
     .nav-header {
