--- a/src/Components/CSS/Footer.css
+++ b/src/Components/CSS/Footer.css
@@ -49,7 +49,7 @@
         position: relative;
         display: inline-block;
         margin-bottom: 1rem;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .footer-div-heading::after {
@@ -64,7 +64,7 @@
     }
 
     .footer-text {
-        font-size: 1rem;
+        font-size: 10px;
     }
 
 }
@@ -104,7 +104,7 @@
         position: relative;
         display: inline-block;
         margin-bottom: 1rem;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .footer-div-heading::after {
@@ -119,7 +119,7 @@
     }
 
     .footer-text {
-        font-size: 1rem;
+        font-size: 10px;
     }
 
 }
@@ -153,7 +153,7 @@
 
     .hospital-name-footer {
         font-weight: bolder;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .footer-div-heading {
@@ -161,7 +161,7 @@
         position: relative;
         display: inline-block;
         margin-bottom: 1rem;
-        font-size: 1.7rem;
+        font-size: 1rem;
     }
 
     .footer-div-heading::after {
@@ -176,7 +176,7 @@
     }
 
     .footer-text {
-        font-size: 1.3rem;
+        font-size: 10px;
     }
 
 }
@@ -210,7 +210,7 @@
 
     .hospital-name-footer {
         font-weight: bolder;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .footer-div-heading {
@@ -218,7 +218,7 @@
         position: relative;
         display: inline-block;
         margin-bottom: 1rem;
-        font-size: 1.7rem;
+        font-size: 1rem;
     }
 
     .footer-div-heading::after {
@@ -233,7 +233,7 @@
     }
 
     .footer-text {
-        font-size: 1.3rem;
+        font-size: 10px;
     }
 }
 
