--- a/src/Components/CSS/Specialities.css
+++ b/src/Components/CSS/Specialities.css
@@ -1,5 +1,5 @@
 .spec-heading {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
@@ -24,6 +24,10 @@
 .floor-div {
     display: flex;
     justify-content: center;
+    align-self: center;
+    width: 40%;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 
@@ -47,7 +51,7 @@
     }
 
     .spec-text {
-        font-size: 1rem;
+        font-size: 10px;
     }
 
     /* doctors */
@@ -77,7 +81,7 @@
     }
 
     .patient-para {
-        font-size: 1rem;
+        font-size: 10px;
         padding-top: 1rem;
     }
 
@@ -113,7 +117,7 @@
     }
 
     .spec-text {
-        font-size: 1.5rem;
+        font-size: 10px;
     }
 
     /* doctors */
@@ -143,7 +147,7 @@
     }
 
     .patient-para {
-        font-size: 1rem;
+        font-size:10px;
         padding-top: 1rem;
     }
 
@@ -179,7 +183,7 @@
     }
 
     .spec-text {
-        font-size: 1.5rem;
+        font-size: 10px;
     }
 
     /* doctors */
@@ -209,7 +213,7 @@
     }
 
     .patient-para {
-        font-size: 1.5rem;
+        font-size: 10px;
         padding-top: 1rem;
     }
 
@@ -242,7 +246,7 @@
     }
 
     .spec-text {
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 
     /* doctors */
@@ -278,7 +282,7 @@
     }
 
     .patient-para {
-        font-size: 1.5rem;
+        font-size:1rem;
         padding-top: 1rem;
     }
 
@@ -310,7 +314,7 @@
     }
 
     .spec-text {
-        font-size: 1.8rem;
+        font-size: 1rem;
     }
 
     /* doctors */
@@ -347,7 +351,7 @@
     }
 
     .patient-para {
-        font-size: 1.5rem;
+        font-size: 1rem;
         padding-top: 1rem;
     }
 
@@ -379,7 +383,7 @@
     }
 
     .spec-text {
-        font-size: 1.8rem;
+        font-size: 1rem;
     }
 
     /* doctors */
@@ -447,7 +451,7 @@
     }
 
     .spec-text {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     /* doctors */
@@ -483,7 +487,7 @@
     }
 
     .patient-para {
-        font-size: 2rem;
+        font-size: 1rem;
         padding-top: 1rem;
     }
 
@@ -514,7 +518,7 @@
     }
 
     .spec-text {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     /* doctors */
@@ -550,7 +554,7 @@
     }
 
     .patient-para {
-        font-size: 2rem;
+        font-size: 1.5rem;
         padding-top: 1rem;
     }
 
@@ -580,7 +584,7 @@
     }
 
     .spec-text {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     /* doctors */
@@ -616,7 +620,7 @@
     }
 
     .patient-para {
-        font-size: 2rem;
+        font-size: 1.5rem;
         padding-top: 1rem;
     }
 
