--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -24,12 +24,18 @@
 }
 
 .about-heading {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
     margin-bottom: 2rem;
-    color: #2d3748;
+    text-decoration: 5px underline rgb(177, 177, 177);
+    text-underline-offset: 8px;
+    transition: all linear 5s;
+}
+
+.about-heading:hover {
+    text-decoration: 5px underline rgb(0, 88, 88);
 }
 
 .about-div {
@@ -92,6 +98,10 @@
     clip-path: polygon(100% 0, 100% 100%, 0 100%);
     animation: cornerPulse 2s infinite ease-in-out;
     pointer-events: none;
+}
+
+.about-book {
+    width: auto;
 }
 
 @keyframes cornerPulse {
@@ -186,6 +196,10 @@
 }
 
 @media (min-width: 641px) and (max-width: 767px) {
+    .about-book {
+        width: auto;
+    }
+
     .about-heading {
         font-size: 2rem;
     }
@@ -205,6 +219,10 @@
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
+    .about-book {
+        width: auto;
+    }
+
     .about-heading {
         font-size: 2rem;
     }
@@ -251,9 +269,6 @@
         transition: all linear 5s;
     }
 
-    .about-heading:hover {
-        text-decoration: none;
-    }
 
     .yt-video-div {
         display: none;
