--- a/src/Components/CSS/Specialities.css
+++ b/src/Components/CSS/Specialities.css
@@ -4,11 +4,17 @@
     line-height: 1.2;
     text-align: center;
     margin-bottom: 2rem;
-    color: #2d3748;
+    text-decoration: 5px underline rgb(177, 177, 177);
+    text-underline-offset: 8px;
+    transition: all linear 5s;
+}
+
+.spec-heading:hover {
+    text-decoration: 5px underline rgb(0, 88, 88);
 }
 
 .spec-gradient {
-    background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
+    background-image: linear-gradient(45deg, rgb(0, 88, 88), rgba(0, 128, 128, 0.516) 30%, white 60%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -147,7 +153,7 @@
     }
 
     .patient-para {
-        font-size:10px;
+        font-size: 10px;
         padding-top: 1rem;
     }
 
@@ -282,7 +288,7 @@
     }
 
     .patient-para {
-        font-size:1rem;
+        font-size: 1rem;
         padding-top: 1rem;
     }
 
