--- a/src/Components/CSS/Testimonial.css
+++ b/src/Components/CSS/Testimonial.css
@@ -1,4 +1,4 @@
-.content-text{
+.content-text {
     font-family: "Noto Serif Gujarati", serif;
 }
 
@@ -6,12 +6,19 @@
     font-size: 2.5rem;
     font-weight: 700;
     line-height: 1.2;
-    text-align: center;
     margin-bottom: 2rem;
-    color: #2d3748;
+    text-align: center;
+    text-decoration: 5px underline rgb(177, 177, 177);
+    text-underline-offset: 8px;
+    transition: all linear 5s;
 }
+
+.testimonial-heading:hover {
+    text-decoration: 5px underline rgb(0, 88, 88);
+}
+
 .testi-gradient {
-    background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
+    background-image: linear-gradient(45deg, rgb(0, 88, 88), rgba(0, 128, 128, 0.516) 30%, white 60%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
